Switch to zip upload

--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -15,6 +15,7 @@
 <hr/>
 
 <div style="margin-left: 5%;">
+    <h1>{{ name }}</h1>
     <p>{{ remarks }}Please contact (MY_NAME) at FIRST.LAST@carleton.ca for any other questions.</p>
     <p style="font-size: smaller">You have two weeks to bring any forward issues with any assignment grade.</p>
     <table style="height:85%; width:85%; ">
