--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,9 @@
 <div class="jumbotron">
     <h1>COMP1005 Marking</h1>
 </div>
-<form action="" method="POST" enctype="multipart/form-data">
+<p>Upload a zipped file with the student's name/number (like <i>'Student-Name_12345678_assignsubmission_file_')</i>.</p>
+<p>Make sure it contains files [a1_p1.py, a1_p2.py ..].</p>
+<form  method=POST enctype="multipart/form-data" action={{ url_for("process_upload" ) }}>
     <input type="file" name="file" multiple/>
     <input type="submit"/>
 </form>
