--- a/static/marking.css
+++ b/static/marking.css
@@ -5,11 +5,7 @@
 }
 
 #marking {
-    /*
-    width: 272px !important;
-    height: 262.639px !important;
-    left: 1108.11px;
-    */
     width: 45%;
     float:right;
+    right: 0;
 }
