Updating test cases

--- a/templates/marking.html
+++ b/templates/marking.html
@@ -35,6 +35,7 @@
     </script>
 </head>
 <body>
+<a style="float: left; left: 0;" href="/">Home</a>
 <form action={{ url_for('show_feedback', name=name) }} method=POST>
     <div>
         <h1 style="text-align: center">{{ name }}</h1>
